working on the programs page

--- a/my_pages_app/templates/base.html
+++ b/my_pages_app/templates/base.html
@@ -15,6 +15,15 @@
       rel="stylesheet"
     />
 
+    <!-- Font Awesome -->
+
+    <!-- <script src="https://kit.fontawesome.com/149ae3bfe5.js" crossorigin="anonymous"></script> -->
+    <!-- <link href="{% static 'fontawesomefree/css/all.min.css' %}" rel="stylesheet" type="text/css"> -->
+
+    <link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'fontawesomefree/css/brands.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">
+
     <!-- Bootstrap Css -->
 
     <link
@@ -39,17 +48,12 @@
     <!-- External Css -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 
-    <!-- Font Awesome -->
-
-    <script
-      src="https://kit.fontawesome.com/149ae3bfe5.js"
-      crossorigin="anonymous"
-    ></script>
   </head>
 
   <body>
     {% include "header.html" %} 
       {% block content %} 
+
       {% endblock %} 
     
     {% include "footer.html" %}
