--- a/my_pages_app/templates/footer.html
+++ b/my_pages_app/templates/footer.html
@@ -12,7 +12,7 @@
           <a href="#" class="nav-link p-0 text-reset">Phone no</a>
         </li>
         <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-reset">Short Text</a>
+          <a href="{% url 'contact' %}" class="nav-link p-0 text-reset">Contact Us</a>
         </li>
       </ul>
     </div>
@@ -21,13 +21,13 @@
       <h5>Related Links</h5>
       <ul class="nav flex-column">
         <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-reset">Who We Are</a>
+          <a href="{% url 'whoweare' %}" class="nav-link p-0 text-reset">Who We Are</a>
         </li>
         <li class="nav-item mb-2">
           <a href="#" class="nav-link p-0 text-reset">Mission</a>
         </li>
         <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-reset">Programs</a>
+          <a href="{% url 'programs' %}" class="nav-link p-0 text-reset">Programs</a>
         </li>
         <li class="nav-item mb-2">
           <a href="#" class="nav-link p-0 text-reset">The Team</a>
