--- a/my_pages_app/templates/home.html
+++ b/my_pages_app/templates/home.html
@@ -6,9 +6,9 @@
         <div class="row pt-5 pb-5">
           <div class="col-lg-6 pt-3 pb-3">
             <h2 class="hero-heading display-5 fw-bold lh-1.5 mb-3">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus,
-              animi dolor. 
+              “You give but little when you give of your possessions. It is when you give of yourself that you truly give."
             </h2>
+            <p>Kahlil Gibran</p>
             <button type="button" class="btn btn-danger btn-lg mt-5 mb-4">
               Explore Now
             </button>
@@ -31,9 +31,7 @@
           <div class="col-lg-8">
             <h3>Our Mission</h3>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error,
-              voluptas libero? Laudantium, quibusdam. Blanditiis corrupti
-              expedita.
+              To empower street children to find their path out of poverty by nurturing their strengths and talents through informal educational activities.
             </p>
             <a href="">Learn How to Volunteer</a>
           </div>
