--- a/my_pages_app/templates/who_we_are.html
+++ b/my_pages_app/templates/who_we_are.html
@@ -48,7 +48,16 @@
       <div class="container">
         <div class="row align-items-center g-5 py-5 my-5">
           <h2 class="col-lg-6">Our Values</h2>
-          <p class="col-lg-4">Inclusiveness, Empathy, Community, Equity, Accountability, Empowerment,Sustainability</p>
+          <ul class="col-lg-4 text-start mx-auto">
+            <li>Inclusiveness</li>
+            <li>Empathy</li>
+            <li>Community</li>
+            <li>Equity</li>
+            <li>Accountability</li>
+            <li>Empowerment</li>
+            <li>Sustainability</li>
+          </ul>
+          
         </div>
       </div>
     </section>
