--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,7 +27,7 @@ body {
 /* NavBar */
 
 #navigation {
-  margin: 2% auto;
+  margin: 2% auto 0;
   padding: 0 10%;
   background-color: #b00f21;
   color: white;
@@ -110,4 +110,20 @@ body {
   color: #fff;
   text-align: left;
   margin: 0;
+}
+
+/* form */
+
+input[type=text], input[type=email], textarea{
+  padding: 12px 20px;
+  margin: 8px auto;
+  display: block;
+}
+
+/* donations page */
+
+/* contact page */
+.contact_hero{
+  margin: 2% auto;
+  padding: 5% 20%;
 }
