--- a/my_pages_app/templates/header.html
+++ b/my_pages_app/templates/header.html
@@ -24,28 +24,50 @@
 
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
+          <li class="nav-item px-2">
             <a class="nav-link nav-text text-reset" href="{% url 'homepage' %}"
               >Home</a
             >
           </li>
-          <li class="nav-item">
-            <a href="{% url 'whoweare' %}" class="nav-link nav-text text-reset"
-              >Who We Are <i class="fa-light fa-chevron-down"></i
-            ></a>
+          <li class="nav-item dropdown px-2">
+            <a href="{% url 'whoweare' %}" class="nav-link nav-text text-reset d-inline-block">Who We are</a>
+            <a class="nav-link nav-text text-reset dropdown-toggle d-inline-block" href=""  role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#"></a>Our Mission</li>
+              <hr>
+              <li><a class="dropdown-item" href="#"></a>Our Vision</li>
+              <hr>
+              <li><a class="dropdown-item" href="#"></a>Our Values</li>
+              <hr>
+              <li><a class="dropdown-item" href="#"></a>Our Target</li>
+              <hr>
+              <li><a class="dropdown-item" href="#"></a>Leadership</li>
+              <hr>
+              <li><a class="dropdown-item" href="#"></a>Advisory Board</li>
+            </ul>
           </li>
-          <li class="nav-item">
-            <a href="{% url 'programs' %}" class="nav-link nav-text text-reset"
-              >Programs <i class="fa-light fa-chevron-down"></i
-            ></a>
+        
+          <li class="nav-item dropdown px-2">
+            <a href="{% url 'programs' %}" class="nav-link nav-text text-reset d-inline-block">Programs</a>
+            <a href="" class="nav-link nav-text text-reset dropdown-toggle d-inline-block" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a> 
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#"></a>Mobile Learning Outreach</li>
+                <hr>
+                <li><a class="dropdown-item" href="#"></a>Mentoring and Counselling</li>
+                <hr>
+                <li><a class="dropdown-item" href="#"></a>Placement & Re-integration</li>
+                <hr>
+                <li><a class="dropdown-item" href="#"></a>Community Support</li>
+              </ul>
           </li>
-          <li class="nav-item">
+  
+          <li class="nav-item px-2">
             <a href="{% url 'impact' %}" class="nav-link nav-text text-reset">Make an Impact</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item px-2">
             <a href="{% url 'contact' %}" class="nav-link nav-text text-reset">Get in Touch</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item px-2">
             <a href="{% url 'donate' %}" class="nav-link nav-donate text-reset">DONATE</a>
           </li>
         </ul>
