--- a/my_pages_app/templates/footer.html
+++ b/my_pages_app/templates/footer.html
@@ -50,8 +50,8 @@
             class="form-control"
             placeholder="Email address"
           />
-          <button class="btn btn-light" type="button">Subscribe</button>
         </div>
+        <a class="btn btn-light" href="" role="button">Subscribe</a>
       </form>
     </div>
   </div>
