--- a/my_pages_app/templates/get_in_touch.html
+++ b/my_pages_app/templates/get_in_touch.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %} {% block content%}
 
-<img class="img-fluid" src="/static/images/kids holding hands.jpg" alt="contact us image">
+<div class="">
+    <img class="img-fluid" src="/static/images/passion.jpg" alt="contact us image">
+</div>
+
 
 <div>
     <div class="container-fluid contact_hero">
