--- a/my_pages_app/templates/who_we_are.html
+++ b/my_pages_app/templates/who_we_are.html
@@ -4,7 +4,7 @@
       <div class="px-4 py-5 my-5">
         <h1 class="display-5 fw-bold">Who We Are</h1>
         <div class="col-lg-6 mx-auto">
-          <p class="mb-4">
+          <p class="mb-4 fst-italic">
             Street Kids Can is a volunteer led organization committed to
             nurturing and unlocking the skills and talents of street children
             through interactive and unconventional educational resources and
