before addding the mailchimp form

--- a/my_pages_app/templates/donate.html
+++ b/my_pages_app/templates/donate.html
@@ -1,9 +1,13 @@
 {% extends 'base.html' %} {% block content%}
-<div >
-<img src="/static/images/donate.jpg" class="img-fluid" alt="donation image">
+<div>
+  <img src="/static/images/donate.jpg" class="img-fluid" alt="donation image" />
 </div>
-<h1>This is the donations page</h1>
-<p>Street children can break out of generational poverty and become respected members of the society with your help. With your help we can get our children off the streets and into safe spaces that they should be in.</p>
+
+<p>
+  Street children can break out of generational poverty and become respected
+  members of the society with your help. With your help we can get our children
+  off the streets and into safe spaces that they should be in.
+</p>
 
 <p>Make a secure donation using one of the options below:</p>
 <p>Bank Name</p>
@@ -11,7 +15,7 @@
 <p>Account number</p>
 
 <h3>OR</h3>
-
-<button>Make a Donation</button>
+<p>Make a donation using our payment partner</p>
+<a class="btn btn-bg btn-color" href="" role="button">Make a donation</a>
 
 {% endblock %}
