--- a/my_pages_app/templates/header.html
+++ b/my_pages_app/templates/header.html
@@ -68,8 +68,9 @@
             <a href="{% url 'contact' %}" class="nav-link nav-text text-reset">Get in Touch</a>
           </li>
           <li class="nav-item px-2">
-            <a href="{% url 'donate' %}" class="nav-link nav-donate text-reset">DONATE</a>
+            <a href="{% url 'donate' %}" class="btn btn-outline-light">Donate</a>
           </li>
+  
         </ul>
       </div>
     </nav>
