--- a/my_pages_app/templates/programs.html
+++ b/my_pages_app/templates/programs.html
@@ -2,7 +2,7 @@
 
 <div class="container-fluid row">
     <h1>Programs</h1>
-    <div class="col-lg-6 px-4 mx-auto text-center">
+    <div class="col-lg-6 px-4 mx-auto text-center fst-italic">
         <p>The rising number of street children has become a global pandemic. The UN estimates that there are over 150 million street children in the world. In Nigeria in particular, children end up on the streets for various reasons such as the inability of their families to cater to them, being disowned by their families due to superstitious beliefs, loss of parents, sexual and domestic abuse in the home and so much more.</p>
     </div>
 </div>
