--- a/my_pages_app/templates/contact_form.html
+++ b/my_pages_app/templates/contact_form.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %} 
 {% block content%}
 <h2>Get in Touch with Us. </h2>
+<div class="container">
    <form action="" method="post">
         {% csrf_token %}
         {{ form }}
         <input type="submit" value="Submit">
    </form>
+</div>
 {% endblock content%}
