--- a/my_pages_app/templates/home.html
+++ b/my_pages_app/templates/home.html
@@ -9,7 +9,7 @@
               “You give but little when you give of your possessions. It is when you give of yourself that you truly give."
             </h2>
             <p>Kahlil Gibran</p>
-            <a class="btn btn-danger" href="{% url 'impact' %}" role="button">Work with Us.</a>
+            <a class="btn btn-lg btn-bg btn-color" href="{% url 'impact' %}" role="button">Work with Us</a>
           </div>
           <div class="mx-auto col-10 col-sm-8 col-lg-6">
             <img class="img-fluid" src="/static/images/home_smiles.jpg" alt="" />
@@ -83,29 +83,10 @@
         </div>
       </div>
       
-      <a class="btn btn-danger" href="{% url 'programs' %}" role="button">Explore our programs</a>
+      <a class="btn btn-bg btn-color btn-lg" href="{% url 'programs' %}" role="button">Explore our programs</a>
 
       </button>
     </section>
-
-    <!-- our volunteers-->
-<!-- 
-    <section id="home-volunteers" class="pt-5">
-      <h2>Our Volunteers</h2>
-      <p>some of our volunteers include</p>
-      <div class="container-fluid">
-        <div class="rows d-flex justify-content-center">
-          <div class="volunteer-image col-sm-3"></div>
-          <div class="volunteer-image col-sm-3"></div>
-          <div class="volunteer-image col-sm-3"></div>
-          <div class="volunteer-image col-sm-3"></div>
-        </div>
-
-        <div class="pt-4">
-            <a href="">More about our team</a>
-         </div>
-      </div>
-    </section> -->
 
     <!-- donations -->
 
@@ -116,7 +97,7 @@
         donations which have gone towards the execution of XYZ.
       </p>
       <h3>If you would like to donatem kindly click the button below.</h3>
-      <a class="btn btn-danger" href="{% url 'donate' %}" role="button">Make a donation</a>
+      <a class="btn btn-bg btn-color btn-lg" href="{% url 'donate' %}" role="button">Make a donation</a>
      
     </section>
 
