--- a/my_pages_app/templates/make_an_impact.html
+++ b/my_pages_app/templates/make_an_impact.html
@@ -1,39 +1,99 @@
 {% extends 'base.html' %} {% block content%}
 
-<h1>This is the Make an Impact Page</h1>
-
-<div>
-    <h3>Who We Are Looking For</h3>
-    <p>We are a volunteer led organisation and our ability to impact and achieve our target is dependent on the hard work of our volunteers who dedicate their time and effort to our cause. We have various opportunity to volunteer both physically at our outreach events and virtually. </p>
-    <p>If you would like to become a part of our community of volunteers around the world, please fill out the form below.</p>
+<!-- <h1>This is the Make an Impact Page</h1> -->
+<div class="container-fluid">
+  <div class="px-5 mx-5 text-center border-bottom">
+    <h1>Who We Are Looking For</h1>
+    <p>
+      We are a volunteer led organisation and our ability to impact and achieve
+      our target is dependent on the hard work of our volunteers who dedicate
+      their time and effort to our cause. We have various opportunities to
+      volunteer both physically at our outreach events and virtually.
+    </p>
+  </div>
 </div>
 
-<div>
-    <h4>We are actively seeking volunteers for the following roles:</h4>
-
-    <div>
-        <h5>Counsellors</h5>
-        <p>Qualified professionals who are able to offer counselling services to children dealing with a wide range of life issues including drug abuse.</p>
+<div class="px-4 text-center">
+  <div class="col-lg-6 mx-auto pt-4">
+    <h4 class="mb-5 mt-5">
+      If you would like to become a part of our community of volunteers around
+      the world, please fill out the form below.
+    </h4>
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+      <div class="col">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Counsellors</h5>
+            <p class="card-text">
+              Qualified professionals who are able to offer counselling services
+              to children dealing with a wide range of life issues including
+              drug abuse.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Mentors</h5>
+            <p class="card-text">
+              As a mentor, you will need to be able to attend our outreach
+              events physically to meet and engage with children in our program
+              at least once a month.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">informal Educators</h5>
+            <p class="card-text">
+              This will suit individuals who love to teach and have valuable
+              skills they can share or pass on to the children. Our learning
+              method is unconventional so it will not be classroom style
+              teaching but rather engaging the children in variety of activities
+              such as puzzles, reading, brain teasers, arts and crafts etc.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Adhoc Volunteers</h5>
+            <p class="card-text">
+              As an adhoc volunteer you would - I am assuming this would refer
+              to support staff that would assist on an adhoc basis at events
+              etc.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <div>
-        <h5>Mentors</h5>
-        <p>As a mentor, you will need to be able to attend our outreach events physically to meet and engage with children in our program at least once a month.</p>
-    </div>
-    <div>
-        <h5>Informal Educators</h5>
-        <p>This will suit individuals who love to teach and have valuable skills they can share or pass on to the children. Our learning method is unconventional so it will not be classroom style teaching but rather engaging the children in variety of activities such as puzzles, reading, brain teasers, arts and crafts etc</p>
-    </div>
-    <div>
-        <h5>Adhoc Volunteers</h5>
-        <p>As a mentor, you will need to be able to attend our outreach events physically to meet and engage with children in our program at least once a month.</p>
-    </div>
-
+    <a
+      class="btn btn-bg btn-color mt-5 btn-hover"
+      href="{% url 'impact' %}"
+      role="button"
+      >Become a Volunteer</a
+    >
+  </div>
 </div>
 
-<div>
+<div class="container-fluid">
+  <div class="px-5 mx-5 text-center">
     <h3>Become a Partner</h3>
-    <p>We welcome organisations who are looking to fulfil their CSR activities through our foundation. We are also looking for partners who can provide us with their spaces and resources to carry out our outreach programs.</p>
+    <p>
+      We welcome organisations who are looking to fulfil their CSR activities
+      through our foundation. We are also looking for partners who can provide
+      us with their spaces and resources to carry out our outreach programs.
+    </p>
+  </div>
+
+  <a class="btn btn-bg btn-color mt-4" href="{% url 'impact' %}" role="button"
+    >Become a Partner</a
+  >
 </div>
 
 {% endblock %}
