--- a/my_pages_app/templates/make_an_impact.html
+++ b/my_pages_app/templates/make_an_impact.html
@@ -74,7 +74,7 @@
 
     <a
       class="btn btn-bg btn-color mt-5 btn-hover"
-      href="{% url 'impact' %}"
+      href="https://docs.google.com/forms/d/1gpjZkC8eaWpeuTRSvUAGV6O1TGeAA7DsFSRBNWG13eA/edit"  target="_blank"
       role="button"
       >Become a Volunteer</a
     >
@@ -91,7 +91,7 @@
     </p>
   </div>
 
-  <a class="btn btn-bg btn-color mt-4" href="{% url 'impact' %}" role="button"
+  <a class="btn btn-bg btn-color mt-4" href="{% url 'partner_with_us' %}" role="button"
     >Become a Partner</a
   >
 </div>
