--- a/my_pages_app/templates/partnership_form.html
+++ b/my_pages_app/templates/partnership_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} 
 {% block content%}
-<h2>Get in Touch with Us. </h2>
+<h2>Partner With Us. </h2>
 <div class="container">
    <form action="" method="post">
         {% csrf_token %}
