--- a/my_pages_app/templates/get_in_touch.html
+++ b/my_pages_app/templates/get_in_touch.html
@@ -43,8 +43,17 @@
                         </div>
                     </div>
                 </div>
+
+                
                     <div class="col-lg-6 pt-3 pb-3">
-                        <a href="{% url 'contact_form' %}">Contact us</a>
+                        <h2>Get in Touch with Us. </h2>
+                        <div class="container">
+                            <form action="" method="post">
+                                {% csrf_token %}
+                                {{ form.as_p }}
+                                <input type="submit" value="Submit">
+                            </form>
+                        </div>
                     </div>
             </div>
         </div>
