--- a/my_pages_app/templates/success.html
+++ b/my_pages_app/templates/success.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %} {% block content%}
 
-<h1>Thank you for Contacting us.</h1>
+{% if section == 'contact' %}
+    <h1>Thank you for contacting us.</h1>
+{% elif section == 'partner' %}
+    <h1>Thank you for requesting to partner with us.</h1>
+{% endif %}
+
 <p>Your message has been successfully sent!</p>
 {% endblock content%}
